fixed jumping nav

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -63,8 +63,9 @@ img {
     display: block;
     padding: 1rem;
     color: white;
-    text-decoration: none;
-    background-color: #64ccc3;
+    border-style: solid;
+	border-color: #64ccc3;
+	border-width: 4px;    background-color: #64ccc3;
     text-align: center;
     font-size: 18px;
 
